# Science

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  accord.pc.in  autogen.sh  build-all.cmd  clean-all.cmd  configure.ac  run-tests.cmd  science-framework (VS Code).sln
